--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
-.App {
+body{
+  background:#efe0ee;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+}
+
+.app-container{
+  margin:0 auto;
+  max-width: 1150px;
+  padding: 50px 0;
+}
+
+.result{
   text-align: center;
+  margin-top: 100px;
+  font-size: 40px;
+  text-transform: uppercase;
+  color: #1f1440;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.input-container{
+  margin-bottom:50px;
   display: flex;
-  flex-direction: column;
+  justify-content:center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.input{
+  max-width: 700px;
+  width: 100%;
+  padding:20px 20px;
+  margin:30px 20px;
+  margin-right: 0px;
+  border: none;
+  border-radius: 4px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 16px;
+  font-weight: 700;
+  color: #575151;
+  outline: none;
+  box-shadow: 0 0px 8px rgba(0,0,0,.4);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+select{
+  width:150px;
+  padding:20px;
+  font-size: 15px;
+  font-weight: 700!important;
+  outline: none;
+  margin-right: 20px;
+  border:none;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;   
+  border-left: none;
+  box-shadow: 5px 0px 8px rgba(0,0,0,.4);
+}
+
+select option{
+   font-size: 18px;
+   width: 100%;
+   height: 40px;
+   border:none!important;
+   background:#efe0ee;
+}
+
+
+.drink-container{
+  width: 100%;
+  display:grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  grid-gap: 30px;  
+  place-items: center;
+}
+
+.drink{
+  width: 270px;
+  height: 300px;
+  border-radius: 6px;
+  box-shadow: 0px 6px 10px rgba(0,0,0,.4);
+  overflow: hidden;
+  position: relative;
+  background:#071e3d;
+  outline: none;
+}
+
+.drink .img-container{
+   width: 100%;
+   height: 260px;
+}
+
+.drink > .img-container > img{
+  width: 100%;
+  height: 260px;
+}
+
+.drink > .drink-name{
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  font-size: 18px;
+  color:#40514e;
+  background:#fff;
+}
+
+.drink-info{
+  background:#1f1440;
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  padding:20px;
+  opacity: 0;
+  transition: .3s ease-in;
+}
+
+.drink-info > h3{
+  max-width: 220px;
+  font-size: 16px;
+  color:#efe0ee;
+  font-weight: 400;
+  margin:10px 0;
+  opacity: .8;
+  text-transform: lowercase;
+}
+
+.drink-info span{
+  font-size: 16px;
+  color: #f8f8f8;
+  font-weight: 900;
+  text-transform: capitalize;
+}
+
+.drink:hover .drink-info{
+  opacity: 1;
 }
